--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   "license": "MIT",
   "description": "익스프레스를 배우자",
   "dependencies": {
-    "express": "^4.21.2"
+    "cookie-parser": "^1.4.7",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "express-session": "^1.18.1",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
